--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,4 @@
-.link { border: 1px solid #ccc; height: 205px; }
+.link { border: 1px solid #ccc; height: 205px; background-color: #fff; }
 
 .link .contain dl { float: left; padding: 2px 102px 0px 68px; border-right: 1px dashed #e7e7e7; height: 168px; margin-top: 18px; }
 
