--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,5 +1,5 @@
 
-.link{border:1px solid #ccc;height: 205px;
+.link{border:1px solid #ccc;height: 205px;background-color: #fff;
     .contain{
         dl{float: left;padding: 2px 102px 0px 68px;border-right:1px dashed #e7e7e7;height: 168px; margin-top: 18px;
             dt{font-size: 15px;font-weight: bold;color:#444;height: 40px;line-height: 40px;}
