--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -2,41 +2,75 @@
 
 #main h3 { height: 52px; line-height: 52px; font-size: 15px; padding-left: 25px; }
 
-#main dl.cart dt:nth-child(1) { background-color: #fff; height: 52px; line-height: 52px; padding-left: 20px; }
+#main dl.cart1 dt { background-color: #fff; height: 52px; line-height: 52px; padding-left: 20px; }
 
-#main dl.cart dt:nth-child(1) i { display: inline-block; }
+#main dl.cart1 dt i { display: inline-block; }
 
-#main dl.cart dt:nth-child(1) i:nth-child(1) { width: 180px; }
+#main dl.cart1 dt i:nth-child(1) { width: 180px; }
 
-#main dl.cart dt:nth-child(1) i:nth-child(1) #all { margin-right: 8px; }
+#main dl.cart1 dt i:nth-child(1) #all { margin-right: 8px; }
 
-#main dl.cart dt:nth-child(1) i:nth-child(2) { width: 460px; }
+#main dl.cart1 dt i:nth-child(2) { width: 460px; }
 
-#main dl.cart dt:nth-child(1) i:nth-child(3) { width: 120px; }
+#main dl.cart1 dt i:nth-child(3) { width: 120px; }
 
-#main dl.cart dt:nth-child(1) i:nth-child(4) { width: 194px; }
+#main dl.cart1 dt i:nth-child(4) { width: 194px; }
 
-#main dl.cart dt:nth-child(1) i:nth-child(5) { width: 120px; }
+#main dl.cart1 dt i:nth-child(5) { width: 120px; }
 
-#main dl.cart dt:nth-child(3) { background-color: #fff; height: 52px; line-height: 52px; padding-left: 20px; }
+#main dl.cart3 dt { background-color: #fff; height: 52px; line-height: 52px; padding-left: 20px; }
 
-#main dl.cart dt:nth-child(3) i { display: inline-block; }
+#main dl.cart3 dt i { display: inline-block; }
 
-#main dl.cart dt:nth-child(3) i:nth-child(1) #all { margin-right: 8px; }
+#main dl.cart3 dt i:nth-child(1) #all { margin-right: 8px; }
 
-#main dl.cart dt:nth-child(3) i:nth-child(2) { margin: 0px 20px; }
+#main dl.cart3 dt i:nth-child(2) { margin: 0px 20px; }
 
-#main dl.cart dt:nth-child(3) i:nth-child(3) { margin-right: 630px; }
+#main dl.cart3 dt i:nth-child(3) { margin-right: 597px; }
 
-#main dl.cart dt:nth-child(3) i:nth-child(4) { margin: 0px 20px; }
+#main dl.cart3 dt i:nth-child(4) { margin: 0px 20px; }
 
-#main dl.cart dt:nth-child(3) i:nth-child(5) { margin: 0px 20px; }
+#main dl.cart3 dt i:nth-child(5) { margin: 0px 20px; }
 
-#main dl.cart dt:nth-child(3) i:nth-child(6) { width: 108px; height: 50px; line-height: 50px; text-align: center; background-color: #fe587e; }
+#main dl.cart3 dt i:nth-child(6) { width: 108px; height: 50px; line-height: 50px; text-align: center; background-color: #fe587e; }
 
-#main dl.cart dt:nth-child(2) { background: url(../img/kong.jpg) no-repeat center; margin: 30px 0px; min-height: 200px; }
+#main dl.cart2 dt.moren { background: url(../img/kong.jpg) no-repeat center; margin: 30px 0px; min-height: 200px; }
 
-#main dl.cart dt:nth-child(2) a { display: block; width: 100%; height: 200px; }
+#main dl.cart2 dt.moren a { display: block; width: 100%; height: 200px; }
+
+#main dl.cart2 dt { height: 136px; line-height: 110px; border: 1px solid #ccc; overflow: hidden; padding-left: 19px; }
+
+#main dl.cart2 dt i { display: inline-block; float: left; margin-right: 8px; }
+
+#main dl.cart2 dt i:nth-child(1) #all { margin-right: 8px; }
+
+#main dl.cart2 dt i:nth-child(2) { margin-top: 20px; padding-left: 8ex; }
+
+#main dl.cart2 dt i:nth-child(2) img { width: 90px; height: 90px; }
+
+#main dl.cart2 dt i:nth-child(3) { margin: 0px 20px; width: 431px; font-size: 13px; }
+
+#main dl.cart2 dt i:nth-child(4) { line-height: 30px; margin-top: 26px; width: 40px; }
+
+#main dl.cart2 dt i:nth-child(4) span { font-size: 15px; }
+
+#main dl.cart2 dt i:nth-child(4) span:nth-child(3) { text-decoration: line-through; }
+
+#main dl.cart2 dt i:nth-child(5) { margin-top: 38px; width: 273px; line-height: 31px; }
+
+#main dl.cart2 dt i:nth-child(5) span { float: left; }
+
+#main dl.cart2 dt i:nth-child(5) .jian { width: 20px; height: 30px; margin-left: 68px; cursor: pointer; }
+
+#main dl.cart2 dt i:nth-child(5) input { width: 30px; height: 30px; padding-left: 11px; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; font-size: 14px; color: #444; }
+
+#main dl.cart2 dt i:nth-child(5) .jia { width: 20px; height: 30px; cursor: pointer; }
+
+#main dl.cart2 dt i:nth-child(6) { width: 100px; }
+
+#main dl.cart2 dt i:nth-child(7) { font-size: 17px; width: 56px; margin-top: 32px; width: 44px; height: 44px; cursor: pointer; line-height: 44px; text-align: center; }
+
+#main dl.cart2 dt i:nth-child(7):hover { background-color: #fff; }
 
 #main .tab { margin-top: 44px; }
 
