--- a/src/css/goods_list.css
+++ b/src/css/goods_list.css
@@ -38,6 +38,12 @@ body { background: #f5f5f5; font-family: "Microsoft Yahei"; }
 
 #main .r { width: 962px; }
 
+#main .r #page { margin-top: 25px; float: right; margin-right: 30px; }
+
+#main .r #page i { width: 45px; height: 45px; line-height: 45px; text-align: center; display: inline-block; border-radius: 5px; }
+
+#main .r #page .active { background: #ccc; }
+
 #main .r .lis { overflow: hidden; width: 962px; margin-top: 17px; }
 
 #main .r .lis span { width: 80px; float: left; color: #d7232a; margin: 3px 0; font-weight: bold; font-size: 12px; }
@@ -54,9 +60,9 @@ body { background: #f5f5f5; font-family: "Microsoft Yahei"; }
 
 #main .r .list ul { margin-top: 38px; }
 
-#main .r .list ul li { width: 232px; height: 357px; border: 1px solid #ccc; background-color: #fff; margin-right: 5px; position: relative; padding: 12px 17px; }
+#main .r .list ul li { width: 232px; height: 357px; border: 1.4px solid #fff; margin-right: 5px; position: relative; padding: 12px 17px; margin-top: 12px; }
 
-#main .r .list ul li .img { display: block; width: 180px; height: 180px; border: 1px solid #ccc; }
+#main .r .list ul li .img { display: block; width: 180px; height: 180px; }
 
 #main .r .list ul li .qty { width: 252px; height: 36px; position: absolute; left: 18px; top: 155px; }
 
