--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,4 @@
-#header { border: 1px solid #ccc; height: 255px; color: #444; }
+#header { height: 255px; color: #444; }
 
 #header .header1 { background-color: #eae9e9; }
 
@@ -52,9 +52,9 @@
 
 #header .nav3 .contain .three a { display: inline-block; line-height: 50px; font-size: 13px; padding: 0px 25px; }
 
-#header .nav3 .contain .two { width: 230px; height: 450px; border: 1px solid #ccc; position: absolute; left: 0px; top: 42px; display: none; background-color: #fe587e; z-index: 999; }
+#header .nav3 .contain .two { width: 230px; height: 450px; position: absolute; left: 0px; top: 42px; display: none; background-color: #fe587e; z-index: 999; }
 
-#header .nav3 .contain .two li { height: 56px; border: 1px solid #ccc; list-style: none; cursor: pointer; line-height: 56px; }
+#header .nav3 .contain .two li { height: 56px; list-style: none; cursor: pointer; line-height: 56px; }
 
 #header .nav3 .contain .two li a { display: inline-block; width: 95px; height: 100%; padding-left: 13px; font-size: 16px; color: #fff; }
 
@@ -73,3 +73,5 @@
 #header .nav3 .contain #cart { width: 120px; height: 40px; float: right; line-height: 40px; text-align: center; background: #fe587e url(../img/jlt.png) no-repeat 10px -90px; }
 
 #header .nav3 .contain #cart a { font-size: 14px; color: #fff; display: block; width: 120px; height: 40px; }
+
+#header .nav3 .contain #cart a i { padding: 0px 3px; font-weight: 600; font-size: 16px; }
