--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 body { font-family: "Microsoft Yahei"; }
 
-#banner { border: 1px solid #ccc; height: 450px; position: relative; }
+#banner { height: 450px; position: relative; }
 
 #banner .contain { position: relative; }
 
@@ -10,7 +10,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #banner .contain i:nth-child(2) { background: url(../img/banner_r.png) no-repeat; position: absolute; right: -259px; }
 
-#banner .contain .banner { width: 740px; height: 450px; border: 1px solid #ccc; position: absolute; left: 230px; top: 0px; }
+#banner .contain .banner { width: 740px; height: 450px; position: absolute; left: 230px; top: 0px; }
 
 #banner .contain .baner-r { width: 226px; height: 435px; position: absolute; top: 8px; right: 0; overflow: hidden; }
 
@@ -56,7 +56,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #banner .contain .baner-r .baner-r-b ul .baner-r-b-4 { background: url(../img/qiandao.png) center 10px no-repeat; }
 
-#ps { border: 1px solid #ccc; height: 205px; background: #f3f3f3; }
+#ps { height: 205px; background: #f3f3f3; }
 
 #ps .contain { position: relative; }
 
@@ -68,7 +68,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #ps .contain a img { width: 235px; height: 146px; }
 
-#ps .contain .chengnuo { float: left; border: 1px solid #ccc; width: 965px; height: 150px; }
+#ps .contain .chengnuo { float: left; width: 965px; height: 150px; }
 
 #ps .contain .chengnuo #free { position: relative; width: 965px; height: 150px; }
 
@@ -78,11 +78,11 @@ body { font-family: "Microsoft Yahei"; }
 
 #ps .contain .chengnuo #free li a img:hover { transition: all 1s; transform: scale(1.1); }
 
-#main { border: 1px solid #ccc; height: 6260px; background: #f3f3f3; padding-top: 20px; }
+#main { height: 6260px; background: #f3f3f3; padding-top: 20px; }
 
 #main .contain .baise { background-color: #fff; color: #555; }
 
-#main .contain .min { overflow: hidden; margin: 0 auto; padding-top: 20px; height: 560px; border: 1px solid red; }
+#main .contain .min { overflow: hidden; margin: 0 auto; padding-top: 20px; height: 560px; }
 
 #main .contain .min .fl { width: 970px; height: 541px; }
 
@@ -100,7 +100,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #main .contain .min .hot2 { width: 701px; height: 324px; display: inline-block; }
 
-#main .contain .min .hot2 li { width: 207px; height: 92px; border: 1px solid #ccc; margin-top: 3px; margin-left: 3px; overflow: hidden; }
+#main .contain .min .hot2 li { width: 207px; height: 92px; margin-top: 3px; margin-left: 3px; overflow: hidden; }
 
 #main .contain .min .hot2 li .l { display: inline-block; width: 80px; height: 90px; float: left; }
 
@@ -112,7 +112,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #main .contain .min .hot2 img { width: 70px; height: 70px; }
 
-#main .contain .time { height: 454px; border: 1px solid red; }
+#main .contain .time { height: 454px; }
 
 #main .contain .time #group_buy { width: 300px; height: 53px; color: #fff; font-size: 22px; line-height: 53px; display: inline-block; }
 
@@ -122,15 +122,15 @@ body { font-family: "Microsoft Yahei"; }
 
 #main .contain .time img { width: 156px; height: 156px; }
 
-#main .contain .act { height: 653px; border: 1px solid red; }
+#main .contain .act { height: 653px; }
 
 #main .contain #L9 div.title { height: 50px; line-height: 58px; background: #fff url(../img/xianshi.png) no-repeat 2px 10px; padding-left: 100px; font-size: 15px; color: #999; }
 
 #main .contain #L9 ul { margin-top: 38px; }
 
-#main .contain #L9 ul li { width: 288px; height: 330px; border: 1px solid #ccc; background-color: #fff; margin-right: 15px; position: relative; padding: 12px 17px; }
+#main .contain #L9 ul li { width: 288px; height: 330px; background-color: #fff; margin-right: 15px; position: relative; padding: 12px 17px; }
 
-#main .contain #L9 ul li .img { display: block; width: 252px; height: 176px; border: 1px solid #ccc; }
+#main .contain #L9 ul li .img { display: block; width: 252px; height: 176px; }
 
 #main .contain #L9 ul li .qty { width: 252px; height: 36px; position: absolute; left: 18px; top: 155px; }
 
@@ -158,7 +158,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #main .contain #L10 .top ul, #main .contain #L11 .top ul { width: 701px; height: 324px; display: inline-block; overflow: hidden; }
 
-#main .contain #L10 .top ul li, #main .contain #L11 .top ul li { float: left; width: 347.5px; height: 158px; border: 1px solid #ccc; margin-top: 5px; margin-left: 3px; overflow: hidden; }
+#main .contain #L10 .top ul li, #main .contain #L11 .top ul li { float: left; width: 347.5px; height: 158px; margin-top: 5px; margin-left: 3px; overflow: hidden; }
 
 #main .contain #L10 .top ul li .l, #main .contain #L11 .top ul li .l { display: inline-block; width: 160px; height: 150px; float: left; }
 
@@ -190,7 +190,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #main .contain #L10 .bottom ul li .hot img, #main .contain #L11 .bottom ul li .hot img { width: 40px; height: 40px; }
 
-#main .contain #L10 .bottom ul li .big, #main .contain #L11 .bottom ul li .big { display: block; width: 234px; height: 150px; border: 1px solid #ccc; }
+#main .contain #L10 .bottom ul li .big, #main .contain #L11 .bottom ul li .big { display: block; width: 234px; height: 150px; }
 
 #main .contain #L10 .bottom ul li .title, #main .contain #L11 .bottom ul li .title { display: block; text-align: center; line-height: 32px; font-size: 14px; }
 
@@ -220,7 +220,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #main .contain .min .fl .r ul li { width: 188.5px; height: 228px; float: left; margin-right: 6px; background-color: #fff; position: relative; text-align: center; margin-top: 3.8px; }
 
-#main .contain .min .fl .r ul li .big { display: block; width: 188.5px; height: 170px; border: 1px solid #ccc; }
+#main .contain .min .fl .r ul li .big { display: block; width: 188.5px; height: 170px; }
 
 #main .contain .min .fl .r ul li .title2 { display: block; text-align: center; line-height: 32px; font-size: 14px; }
 
@@ -259,8 +259,6 @@ body { font-family: "Microsoft Yahei"; }
 #main #ul_stair li:hover { background-color: #fe587e; }
 
 #header .nav3 .contain .two { display: block; }
-
-#footer { border: 1px solid #ccc; }
 
 #link2 { background: #f3f3f3; }
 
