--- a/src/sass/cart.scss
+++ b/src/sass/cart.scss
@@ -1,7 +1,7 @@
 #main{padding-top: 28px;min-height: 800px;background-color: #f5f5f5;
     h3{height: 52px;line-height: 52px;font-size: 15px;padding-left: 25px;}
-    dl.cart{
-        dt:nth-child(1){background-color: #fff;height: 52px;line-height: 52px;padding-left: 20px;
+    dl.cart1{
+        dt{background-color: #fff;height: 52px;line-height: 52px;padding-left: 20px;
             i{display: inline-block;}
             i:nth-child(1){width: 180px;#all{margin-right: 8px;}}
             i:nth-child(2){width: 460px;}
@@ -10,20 +10,49 @@
             i:nth-child(5){width: 120px;}
             i:nth-child(6){}
         }
-        dt:nth-child(3){background-color: #fff;height: 52px;line-height: 52px;padding-left: 20px;
+    }
+
+    dl.cart3{
+        dt{background-color: #fff;height: 52px;line-height: 52px;padding-left: 20px;
             i{display: inline-block;}
             i:nth-child(1){#all{margin-right: 8px;}}
             i:nth-child(2){margin: 0px 20px;}
-            i:nth-child(3){margin-right:630px;}
+            i:nth-child(3){margin-right:597px;}
             i:nth-child(4){margin: 0px 20px;}
             i:nth-child(5){margin: 0px 20px;}
             i:nth-child(6){width: 108px;height: 50px;line-height: 50px;text-align: center;background-color: #fe587e;}
         }
-        dt:nth-child(2){background: url(../img/kong.jpg) no-repeat center;margin: 30px 0px;min-height: 200px;
+    }
+    dl.cart2{
+        dt.moren{background: url(../img/kong.jpg) no-repeat center;margin: 30px 0px;min-height: 200px;
             a{display: block;width: 100%;height: 200px;}
             
         }
+        dt{height: 136px;line-height: 110px;border:1px solid #ccc;overflow: hidden;padding-left: 19px;
+            i{display: inline-block;float: left;margin-right: 8px;}
+            i:nth-child(1){#all{margin-right: 8px;}}
+            i:nth-child(2){margin-top: 20px;padding-left: 8ex;
+                img{width: 90px;height: 90px;}}
+            i:nth-child(3){margin: 0px 20px;width: 431px;font-size: 13px;}
+            i:nth-child(4){line-height: 30px;margin-top: 26px;width: 40px;
+                span{font-size: 15px;}
+                span:nth-child(3){text-decoration: line-through;}
+            }
+            i:nth-child(5){margin-top: 38px;width: 273px;
+                line-height: 31px;
+                span{float: left;}
+                .jian{width: 20px;height: 30px;margin-left: 68px;cursor: pointer;}
+                input{width: 30px;height: 30px;padding-left: 11px;border-top: 1px solid #ccc;border-bottom: 1px solid #ccc;font-size: 14px;color:#444;}
+                .jia{width: 20px;height: 30px;cursor: pointer;}
+            }
+            i:nth-child(6){width: 100px;}
+            i:nth-child(7){font-size: 17px;width: 56px;margin-top: 32px;width: 44px;height: 44px;cursor: pointer;line-height: 44px;text-align: center;}
+            i:nth-child(7):hover{background-color: #fff;}
+
+        }
     }
+        
+    
     .tab{margin-top: 44px;
         >ul{margin-bottom: 33px;
             li{height: 38px;line-height: 38px;padding: 0px 20px;font-size: 15px;}
