--- a/src/sass/deta_list.scss
+++ b/src/sass/deta_list.scss
@@ -10,10 +10,14 @@ body{
         }
     }
     .main2{
-        height: 540px;border:1px solid #ccc;
-        .l{width: 365px;height: 513px;border:1px solid #ccc;}
+        height: 540px;padding-top: 14px ;padding-left: 12px;
+        .l{width: 365px;height: 513px;
+            .goods{
+                img{width: 350px;}
+            }
+        }
         .m{padding-left: 20px;padding-top: 8px;
-            width: 555px;height: 487px;border:1px solid #ccc;
+            width: 555px;height: 487px;
             .title{font-size: 16px;color:#444;height: 24px;line-height: 38px;}
             .price1{font-size: 13px;line-height: 65px;
                 span{padding-left: 20px;text-decoration: line-through;}
@@ -38,14 +42,15 @@ body{
                 input{width: 30px;height: 30px;padding-left: 11px;border-top: 1px solid #ccc;border-bottom: 1px solid #ccc;font-size: 14px;color:#444;}
                 .jia{width: 20px;height: 30px;cursor: pointer;}
             }
-            .btn{line-height: 108px;
+            .btn{line-height: 108px;position: relative;
+                img{width: 38px;position: absolute;top: 36px;left: 181px;z-index:-1;}
                 button{width: 142px;height: 38px;border-radius:5px;background-color: #ffeded;color:#fe587e;border: 1px solid #fe587e;line-height: 38px;text-align: center;margin-left: 18px;cursor: pointer;}
                 .btn2{line-height: 22px;
                     background: #fe587e;border: 1px solid #fe587e;color:#fff;font-style: 13px;
                 }
             }
         }
-        .r{width: 260px;height: 540px;border:1px solid #ccc;
+        .r{width: 260px;height: 540px;
             .top{width: 260px;height: 92px;line-height: 92px;
                 background: #fcfcfc;
                 img{display: inline-block;}
@@ -75,7 +80,7 @@ body{
             }
             .tab{
                 %li{
-                    li{width: 220px;height: 81px;border:1px solid #ccc;margin-top: 3px;margin-left: 3px;overflow: hidden;padding: 10px;
+                    li{width: 220px;height: 81px;margin-top: 3px;margin-left: 3px;overflow: hidden;padding: 10px;
                         .l{display: inline-block;width: 60px;height: 60px;float: left;margin-right: 20px;img{width: 60px;height: 60px;}
                         }
                         p{display: inline-block;width: 114px;padding: 3px 0px;
@@ -114,3 +119,4 @@ body{
         }
     }
 }
+.gds-zoom-big img{width: 655px;}
