--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,11 +1,11 @@
 // body{background-color: #ccc;}
 body{font-family: "Microsoft Yahei";}
-#banner{border:1px solid #ccc;height: 450px;position: relative;
+#banner{height: 450px;position: relative;
     .contain{position: relative;
         >i{display: inline-block;width: 259px;height: 450px;}
         i:nth-child(1){background: url(../img/banner_l.png) no-repeat;position: absolute;left: -259px;}
         i:nth-child(2){background: url(../img/banner_r.png) no-repeat;position: absolute;right: -259px;}
-        .banner{width: 740px;height: 450px;border:1px solid #ccc;position: absolute;left: 230px;top: 0px;}
+        .banner{width: 740px;height: 450px;position: absolute;left: 230px;top: 0px;}
         .baner-r{width:226px; height:435px; position:absolute; top:8px; right:0; overflow:hidden; }
         .baner-r .baner-r-t{width:230px; height: 198px; border:1px solid #e6e6e6;}
         .baner-r .baner-r-t .baner-r-t-txt{height:36px; border-bottom:1px solid #e6e6e6;background:#fff}
@@ -30,7 +30,7 @@ body{font-family: "Microsoft Yahei";}
         .baner-r .baner-r-b ul .baner-r-b-4{background: url(../img/qiandao.png) center 10px no-repeat;}
         }
 }
-#ps{border:1px solid #ccc;height: 205px;background: #f3f3f3;
+#ps{height: 205px;background: #f3f3f3;
     .contain{position: relative;
         span{display: inline-block;width: 30px;text-align: center;line-height: 20px;height: 20px;position: absolute;font-size: 14px;border-radius:8px;font-weight: 600;background-color: #fe587e;left: 622.5px;top: 30px;color:#fff;}
         img{margin: 0 auto;}
@@ -38,7 +38,7 @@ body{font-family: "Microsoft Yahei";}
             img{width: 235px;
             height: 146px;}
         }
-        .chengnuo{float: left;border:1px solid #ccc;width: 965px;height: 150px;
+        .chengnuo{float: left;width: 965px;height: 150px;
             #free{position: relative;width: 965px;height: 150px;
                 li{
                     position: absolute;
@@ -55,7 +55,7 @@ body{font-family: "Microsoft Yahei";}
     }
 }
 #main{
-    border:1px solid #ccc;height: 6260px;background: #f3f3f3;padding-top: 20px;
+    height: 6260px;background: #f3f3f3;padding-top: 20px;
     .contain{
         .baise{background-color: #fff;color:#555;}
         .min {
@@ -63,7 +63,7 @@ body{font-family: "Microsoft Yahei";}
             margin: 0 auto;
             padding-top: 20px;
             height: 560px;
-            border:1px solid red;
+            
             @extend %i_min;
             .fl{width: 970px;height: 541px;
                 .title{height: 50px;font-size: 18px;font-weight: bold;color:#fff;line-height: 50px;padding-left: 12px;margin-bottom: 10px;
@@ -78,7 +78,7 @@ body{font-family: "Microsoft Yahei";}
             .hot{color:#fff;font-size: 16px;padding-left: 10px;background-color:#fe587e;height: 50px;line-height: 50px;}
             .hot2{
                     width: 701px;height: 324px;display: inline-block;
-                    li{width: 207px;height: 92px;border:1px solid #ccc;margin-top: 3px;margin-left: 3px;overflow: hidden;
+                    li{width: 207px;height: 92px;margin-top: 3px;margin-left: 3px;overflow: hidden;
                         .l{display: inline-block;width: 80px;height: 90px;float: left;}
                         p{display: inline-block;width: 114px;padding: 13px 0px;
                             span{line-height: 18px;}
@@ -89,7 +89,7 @@ body{font-family: "Microsoft Yahei";}
                     height: 70px;}
             }
         }
-        .time{height: 454px;border:1px solid red;
+        .time{height: 454px;
             #group_buy{width: 300px;height: 53px;color:#fff;font-size: 22px;line-height: 53px;display: inline-block;
                 span{background-color: #1B1614;margin: 0px 5px;display: inline-block;height: 53px;width: 44px;border-radius:8px;text-align: center;font-weight: 600;}
                 i{font-size: 16px;color:#444;}
@@ -97,13 +97,13 @@ body{font-family: "Microsoft Yahei";}
             img{width: 156px;
             height: 156px;}
         }
-        .act{height: 653px;border:1px solid red;}
+        .act{height: 653px;}
         #L9{
             div.title{height: 50px;line-height: 58px;background: #fff url(../img/xianshi.png) no-repeat 2px 10px;padding-left: 100px;font-size: 15px;color:#999;
             }
             ul{margin-top: 38px;
-                li{width: 288px;height: 330px;border:1px solid #ccc;background-color: #fff;margin-right: 15px;position: relative;padding: 12px 17px;
-                    .img{display: block;width: 252px;height: 176px;border:1px solid #ccc;
+                li{width: 288px;height: 330px;background-color: #fff;margin-right: 15px;position: relative;padding: 12px 17px;
+                    .img{display: block;width: 252px;height: 176px;
                     }
                     .qty{width: 252px;height: 36px;position: absolute;left: 18px;top: 155px;
                         i{display: inline-block;width: 150px;height: 20px;border-radius:10px;background: url(../img/jdtbg.png) no-repeat}
@@ -128,7 +128,7 @@ body{font-family: "Microsoft Yahei";}
             .top{height: 334px;
                 div{width: 493px;display: inline-block;}
                 ul{width: 701px;height: 324px;display: inline-block;overflow: hidden;
-                    li{float: left;width: 347.5px;height: 158px;border:1px solid #ccc;margin-top: 5px;margin-left: 3px;overflow: hidden;
+                    li{float: left;width: 347.5px;height: 158px;margin-top: 5px;margin-left: 3px;overflow: hidden;
                         .l{display: inline-block;width: 160px;height: 150px;float: left}
                         p{display: inline-block;width: 173px;
                         padding: 13px 0px;
@@ -156,7 +156,7 @@ body{font-family: "Microsoft Yahei";}
                         .hot{display: inline-block;position: absolute;right: 10px;top: 10px;
                             img{width: 40px;height: 40px; }
                         }
-                        .big{display: block;width: 234px;height: 150px;border:1px solid #ccc;}
+                        .big{display: block;width: 234px;height: 150px;}
                         .title{display: block;text-align: center;line-height: 32px;font-size: 14px;}
                         .sp1{color:#fe587e;font-size: 22px;margin-right: 10px;line-height: 30px;padding-right: 12px;}
                         .sp2{color:#999;font-size: 14px;text-decoration: line-through;line-height: 30px;}
@@ -192,7 +192,7 @@ body{font-family: "Microsoft Yahei";}
                         ul{float: right;width: 778px;display: none;
                             li{ width: 188.5px;height: 228px;float: left;margin-right: 6px;background-color: #fff;position: relative;text-align: center;margin-top: 3.8px;
                                 
-                                .big{display: block;width: 188.5px;height: 170px;border:1px solid #ccc;}
+                                .big{display: block;width: 188.5px;height: 170px;}
                                 .title2{display: block;text-align: center;line-height: 32px;font-size: 14px;}
                                 .sp1{color:#fe587e;font-size: 22px;margin-right: 10px;line-height: 30px;padding-right: 12px;}
                                 .sp2{color:#999;font-size: 14px;text-decoration: line-through;line-height: 30px;}
@@ -244,7 +244,7 @@ body{font-family: "Microsoft Yahei";}
 
 #header .nav3 .contain .two{display: block;}
 
-#footer{border:1px solid #ccc;}
+#footer{}
 #link2{background: #f3f3f3;
     .contain{
         h3{font-size: 14px;line-height: 75px;height: 75px;color:#444;a{margin: 0 8px;}}
